02_NetworkPolicy/apps.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app-a
  namespace: secure
  labels:
    app: a
spec:
  containers:
  - name: app-a
    image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: app-b
  namespace: secure
  labels:
    app: b
spec:
  containers:
  - name: app-b
    image: nginx
---
apiVersion: v1
kind: Service
metadata:
  name: app-a
  namespace: secure
spec:
  selector:
    app: a
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app-b
  namespace: secure
spec:
  selector:
    app: b
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
